<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutDev">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_kpu"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
    android:id="@+id/tv_nameDev"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:textStyle="bold"
    android:textSize="20sp"
    android:text="@string/namaDev"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_profile"/>

    <TextView
    android:id="@+id/tv_nimDev"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:textStyle="bold"
    android:textSize="20sp"
    android:text="@string/nim"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_nameDev"/>

    <TextView
    android:id="@+id/tv_emailDev"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:textStyle="bold"
    android:textSize="16sp"
    android:text="@string/emailDev"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_nimDev"/>


</androidx.constraintlayout.widget.ConstraintLayout>